--- a/src/components/common/sidebar/Sidebar.scss
+++ b/src/components/common/sidebar/Sidebar.scss
@@ -15,7 +15,7 @@
     display: flex;
     align-items: center;
     justify-content: start;
-    margin-bottom: 16px;
+    margin-bottom: 10px;
   }
   svg {
     color: #fff;
@@ -24,4 +24,11 @@
     color: #fff;
     // font-size: 18px;
   }
+}
+.sidebar-item {
+  padding: 7px 40px;
+  border-radius: 5px;
+}
+.sidebar-item.active {
+  background-color: #0000005c;
 }
