--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,3 @@
-@import url(./fonts.scss);
-@import url(./global.scss);
-@import url(./variable.scss);
+@import "@/styles/fonts.scss";
+@import "@/styles/global.scss";
+@import "@/styles/variable.scss";
