--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,14 +1,23 @@
 .custom-wrapper {
   padding: 30px;
 }
+
 .h-100vh {
   height: 100vh;
 }
+
 .cursor-pointer {
   cursor: pointer;
 }
+
 header,
 .sidebar,
 .main-container {
   transition: 0.3s;
+}
+
+.text-wrap {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
