--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,3 @@
-@import "@/styles/fonts.scss";
-@import "@/styles/global.scss";
-@import "@/styles/variable.scss";
+@use "@/styles/fonts";
+@use "@/styles/global";
+@use "@/styles/variable";
