--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -15,5 +15,5 @@ header,
 .text-wrap {
   text-overflow: ellipsis;
   overflow: hidden;
-  white-space: nowrap;
+  white-space: nowrap !important;
 }
