user delete condition added

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -17,3 +17,8 @@ header,
   overflow: hidden;
   white-space: nowrap !important;
 }
+
+.error-row {
+  background-color: #ffebe6 !important; /* Light red */
+  color: #d32f2f !important; /* Darker red text */
+}
